W-12276645: reduce computational complexity on ComponentParameterization